# openwrt-ha-presence

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.example  README.md  config.example.yaml  config.yaml.example  docker-compose.yaml.example  pyproject.toml  pyrightconfig.json
.claude/skills/close/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/start/: SKILL.md
.github/workflows/: ci.yml
docs/plans/: 2026-02-13-implementation-plan.md  2026-02-13-openwrt-presence-design.md  2026-02-16-direct-ap-scraping.md  2026-04-21-eve-hardening.md
docs/reviews/architecture/: 2026-04-21-architecture-review.md  _agent_a1_boundaries.md  _agent_a2_types.md  _agent_a3_robustness.md  _agent_a4_extensibility_tests.md
scripts/: check.sh
src/openwrt_presence/: __main__.py  audit.py  config.py  domain.py  engine.py  logging.py  logtail.py  monitor.py  mqtt.py  mqtt_client.py  parser.py
src/openwrt_presence/sources/: __init__.py  base.py  exporters.py  prometheus.py  syslog.py  victorialogs.py
tests/: conftest.py  fakes.py  test_architecture.py  test_audit.py  test_chaos_dead_ap.py  test_config.py  test_domain.py  test_engine.py  test_engine_properties.py  test_integration.py  test_logging.py  test_main.py  test_mqtt.py  test_parser.py  test_source_exporters.py  test_source_prometheus.py  test_source_syslog.py  test_source_victorialogs.py  test_wire_format.py  wire_format_golden.json
