[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openwrt-presence"
version = "0.5.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "paho-mqtt>=2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "structlog>=24.0",
]

[project.scripts]
openwrt-monitor = "openwrt_presence.monitor:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "pyright>=1.1.380",
    "ruff>=0.6.0",
    "pre-commit>=3.7",
    "aiohttp[speedups]>=3.9",    # for aiohttp test server
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
